--- a/4-5/aialgorithms.ipynb
+++ b/4-5/aialgorithms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "dc26f6d4",
    "metadata": {},
    "outputs": [
@@ -35,6 +35,7 @@
     "from openai import OpenAI\n",
     "import json\n",
     "\n",
+    "# Завантаження ключів API з файлу для безпеки\n",
     "with open(\"keys.json\") as f:\n",
     "    keys = json.load(f)\n",
     "\n",
@@ -42,6 +43,7 @@
     "model = \"gpt-5-nano\"\n",
     "instructions = \"pure python code only, no explanations, comments, markdown code fences, file names, headings, or any other text\"\n",
     "\n",
+    "# Генерація коду швидкого сортування\n",
     "response = client.responses.create(\n",
     "    model=model,\n",
     "    instructions=instructions,\n",
@@ -53,17 +55,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1a00b8d4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Запуск згенерованого коду \n",
     "exec(response.output_text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3b6c3e57",
    "metadata": {},
    "outputs": [
@@ -90,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "062de8c4",
    "metadata": {},
    "outputs": [
@@ -124,6 +127,7 @@
     }
    ],
    "source": [
+    "# Генерація коду пошуку простих чисел у масиві\n",
     "responsePrime = client.responses.create(\n",
     "    model=model,\n",
     "    instructions=instructions,\n",
@@ -204,11 +208,14 @@
     "import pandas as pd\n",
     "from io import StringIO\n",
     "\n",
+    "# Завантаження датасету про ціни на житло \n",
     "df = pd.read_csv(\"data/housing_price_dataset.csv\")\n",
+    "\n",
     "buffer = StringIO()\n",
     "df.info(buf=buffer)\n",
     "info = buffer.getvalue()\n",
     "\n",
+    "# Генерація коду аналізу датафрейму: фільтрація рядків, обчислення середнього значення та побудова графіка\n",
     "responseDataA = client.responses.create(\n",
     "    model=model,\n",
     "    instructions=instructions,\n",
@@ -218,14 +225,6 @@
     "print(responseDataA.output_text)\n",
     "exec(responseDataA.output_text)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c98f8cb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
